--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,20 @@
 		    <artifactId>mongo-java-driver</artifactId>
 		    <version>3.12.7</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+		
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>				
 				
 	</dependencies>
 
