--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,12 @@
 		    <artifactId>mongo-java-driver</artifactId>
 		    <version>3.12.7</version>
 		</dependency>
-				
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.3.11.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
