--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
+			<artifactId>mapstruct-jdk8</artifactId>
 			<version>1.3.0.Final</version>
 		</dependency>
 
