--- a/pom.xml
+++ b/pom.xml
@@ -28,17 +28,16 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.8</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
+			<artifactId>mapstruct-jdk8</artifactId>
 			<version>1.3.0.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>2.1.19.RELEASE</version>
+			<version>2.1.9.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -61,7 +60,11 @@
 			</exclusions>
 		</dependency>
 
-				
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
